<resources>
  <string name="app_name">Oppia</string>
  <string name="nav_header_title">Sean</string>
  <string name="nav_header_subtitle">14 Stories Completed | 3 Topics In Progress</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="menu_home">Home</string>
  <string name="menu_help">Help</string>
  <string name="menu_switch_profile">Switch Profile</string>
  <string name="administrator_controls">Administrator Controls</string>
  <string name="drawer_open_content_description">Navigation Menu Open</string>
  <string name="drawer_close_content_description">>Navigation Menu Close</string>
  <string name="welcome_text">Welcome to Oppia!</string>
  <string name="welcome_back_text">Welcome back to Oppia!</string>
  <string name="audio_play_description">Play audio</string>
  <string name="audio_pause_description">Pause audio</string>
  <string name="audio_language_select_dialog_okay_button">OK</string>
  <string name="audio_language_select_dialog_cancel_button">Cancel</string>
  <string name="audio_language_select_dialog_title">Audio Language</string>
  <string name="audio_dialog_offline_title">Currently Offline</string>
  <string name="audio_dialog_offline_message">Make sure Wi-Fi or cellular data is turned on, then try again.</string>
  <string name="audio_dialog_offline_positive">OK</string>
  <string name="cellular_data_alert_dialog_okay_button">OK</string>
  <string name="cellular_data_alert_dialog_cancel_button">Cancel</string>
  <string name="cellular_data_alert_dialog_title">Currently on Cellular Data</string>
  <string name="cellular_data_alert_dialog_description">Streaming audio may use a lot of cellular data.</string>
  <string name="cellular_data_alert_dialog_checkbox">Don\'t show this message again</string>
  <string name="concept_card_toolbar_title">Concept Card</string>
  <string name="stop_exploration_dialog_title">Leave to Topic Page?</string>
  <string name="stop_exploration_dialog_description">Your progress will not be saved.</string>
  <string name="stop_exploration_dialog_cancel_button">Cancel</string>
  <string name="stop_exploration_dialog_leave_button">Leave</string>
  <string name="topic_practice_master_these_skills">Master These Skills</string>
  <string name="topic_practice_skills_description">Select or unselect skills that you want to practice</string>
  <string name="topic_practice_start">Start</string>
  <string name="state_continue_button">Continue</string>
  <string name="state_continue_submit">Submit</string>
  <string name="previous_state_description">Navigate to previous state</string>
  <string name="next_state_description">Navigate to next state</string>
  <string name="state_submit_button">Submit</string>
  <string name="state_end_exploration_button">Return To Topic</string>
  <string name="previous_responses_header">Previous Responses (%d)</string>
  <string name="state_learn_again_button">Learn Again</string>
  <string name="topic_download_text">(%s)</string>
  <string name="info">Info</string>
  <string name="lessons">Lessons</string>
  <string name="practice">Practice</string>
  <string name="review">Review</string>
  <string name="topic">Topic</string>
  <string name="topic_story_progress_percentage">%s\%%</string>
  <string name="topic_play_chapter_index">%s.</string>
  <string name="chapter_name">Chapter %s: %s</string>
  <string name="chapter_completed">Chapter %s: %s is completed.</string>
  <string name="text_input_default_content_description">Enter text.</string>
  <string name="fractions_default_hint_text">Enter a fraction in the form x/x, or a mixed number in the form x x/x.</string>
  <string name="fractions_default_hint_text_no_integer">Enter a fraction in the form x/x.</string>
  <string name="numeric_input_content_description">Enter a number.</string>
  <string name="number_with_units_input_hint_text">Write numbers with units here.</string>
  <string name="enable_audio_playback_content_description">Enable audio voiceover for this lesson.</string>
  <string name="recently_played_stories">Recently-Played Stories</string>
  <string name="view_all">View All</string>
  <string name="ongoing_story_last_week">Played within the Last Week</string>
  <string name="ongoing_story_last_month">Played within the Last Month</string>
  <string name="lesson_thumbnail_content_description">Image for %s</string>
  <string name="all_topics">All Topics</string>
  <string name="stories_you_can_play">Stories You Can Play</string>
  <string name="go_to_previous_page">Go to previous page.</string>
  <string name="continue_playing_activity">Continue playing</string>
  <string name="topic_downloaded">Topic Downloaded</string>
  <string name="downloaded">Downloaded</string>
  <string name="status_in_progress">In Progress</string>
  <string name="status_completed">Completed</string>
  <string name="show_hide_chapter_list">Show/Hide chapter list of %s</string>
  <string name="play_pause_audio">Play/Pause Audio</string>
  <string name="help">Help</string>
  <string name="preferences">Preferences</string>
  <string name="search">Search</string>
  <string name="fraction_error_invalid_chars">Please only use numerical digits, spaces or forward slashes (/)</string>
  <string name="fraction_error_invalid_format">Please enter a valid fraction (e.g., 5/3 or 1 2/3)</string>
  <string name="fraction_error_divide_by_zero">Please do not put 0 in the denominator</string>
  <string name="fraction_error_larger_than_seven_digits">None of the numbers of the fraction should be larger than 7 digits.</string>
  <string name="number_error_starting_with_floating_point">Please begin your answer with a number (e.g.,”0” in 0.5).</string>
  <string name="number_error_invalid_format">Please enter a valid number.</string>
  <string name="number_error_larger_than_fifteen_characters">The answer can contain at most 15 characters (i.e.,[0-9] or "." or "-").</string>
  <string name="unknown_size">Unknown size</string>
  <string name="size_bytes">%d Bytes</string>
  <string name="size_kb">%d KB</string>
  <string name="size_mb">%d MB</string>
  <string name="size_gb">%d GB</string>
  <string name="correct">Correct!</string>
  <string name="topic_prefix">Topic:</string>
  <plurals name="chapter_count">
    <item quantity="one">
      1 Chapter
    </item>
    <item quantity="other">
      %d Chapters
    </item>
  </plurals>
  <plurals name="story_count">
    <item quantity="one">
      1 Story
    </item>
    <item quantity="other">
      %d Stories
    </item>
  </plurals>
  <plurals name="story_total_chapters">
    <item quantity="one">%d of %d Chapter Completed</item>
    <item quantity="other">%d of %d Chapters Completed</item>
  </plurals>
  <plurals name="lesson_count">
    <item quantity="one">
      1 Lesson
    </item>
    <item quantity="other">
      %d Lessons
    </item>
  </plurals>
  <string name="profile_chooser_admin">Administrator</string>
  <string name="profile_chooser_select">Select your profile</string>
  <string name="profile_chooser_add">Add Profile</string>
  <string name="admin_auth_heading">Administrator Authorization Required</string>
  <string name="admin_auth_sub">Enter the Administrator PIN in order to create a new account.</string>
  <string name="admin_auth_pin">Administrator\'s PIN</string>
  <string name="admin_auth_incorrect">Incorrect Administrator PIN. Please try again.</string>
  <string name="admin_pin_requirement_description">Before we add profiles, we need to protect your account by creating a PIN. This gives you the ability to authorize downloads and manage profiles on the device.</string>
  <string name="admin_pin_pin_description">Do <b>not</b> use a PIN you have set for personal accounts like banking or social security.</string>
  <string name="admin_pin_new_pin">New 5-Digit PIN</string>
  <string name="admin_pin_new_confirm">Confirm 5-Digit PIN</string>
  <string name="admin_pin_error_pin_length">Your PIN should be 5 digits long.</string>
  <string name="admin_pin_error_pin_confirm_wrong">Please make sure that both PINs match.</string>
  <string name="admin_pin_submit">Submit</string>
  <string name="add_profile_title">Add Profile</string>
  <string name="add_profile_input_name">Name (required)</string>
  <string name="add_profile_input_pin">3-Digit PIN (optional)</string>
  <string name="add_profile_input_confirm_pin">Confirm 3-Digit PIN</string>
  <string name="add_profile_allow_download_heading">Allow Download Access</string>
  <string name="add_profile_allow_download_sub">User is able to download and delete content without Administrator password. Only available with PIN.</string>
  <string name="add_profile_create_btn">Create</string>
  <string name="add_profile_close">Close</string>
  <string name="add_profile_pin_info">With a PIN, nobody else can access a profile besides this assigned user.</string>
  <string name="add_profile_error_image_failed_store">We failed to store your avatar image. Please try again.</string>
  <string name="add_profile_error_name_not_unique">This name is already in use by another profile.</string>
  <string name="add_profile_error_name_empty">Please enter a name for this profile.</string>
  <string name="add_profile_error_name_only_letters">Names can only have letters. Try another name?</string>
  <string name="add_profile_error_pin_length">Your PIN should be 3 digits long.</string>
  <string name="add_profile_error_pin_confirm_wrong">Please make sure that both PINs match.</string>
  <string name="pin_password_hello">Hi, %s!</string>
  <string name="pin_password_admin_enter">Please enter your Administrator PIN.</string>
  <string name="pin_password_user_enter">Please enter your PIN.</string>
  <string name="pin_password_forgot_pin">I forgot my pin.</string>
  <string name="pin_password_incorrect_pin">Incorrect PIN.</string>
  <string name="pin_password_show">show</string>
  <string name="pin_password_hide">hide</string>
  <string name="pin_password_close">Close</string>
  <string name="pin_password_success">PIN change is successful</string>
  <string name="pin_password_forgot_title">Forgot PIN?</string>
  <string name="pin_password_forgot_message">To reset your PIN, please uninstall Oppia and then reinstall it.\n\nKeep in mind that if the device has not been online, you may lose user progress on multiple accounts. </string>
  <string name="pin_password_play_store">Go to the play store</string>
  <string name="show_hide_password_icon">Show/Hide password icon</string>
  <string name="admin_settings_label">Administrator\'s PIN</string>
  <string name="admin_settings_heading">Access to Administrator Settings</string>
  <string name="admin_settings_sub">Administrator\'s PIN required to change user\'s PIN</string>
  <string name="admin_settings_cancel">Cancel</string>
  <string name="admin_settings_submit">Submit</string>
  <string name="admin_settings_incorrect">Incorrect Administrator PIN. Please try again.</string>
  <string name="reset_pin_enter">Enter a New Pin</string>
  <string name="my_downloads">My Downloads</string>
  <string name="tab_downloads">Downloads</string>
  <string name="tab_updates">Updates (2)</string>
  <string name="home_activity_back_dialog_message">Would you like to exit your profile?</string>
  <string name="home_activity_back_dialog_cancel">Cancel</string>
  <string name="home_activity_back_dialog_exit">Exit</string>
  <string name="profile_list_activity_title">Profiles</string>
  <string name="profile_edit_created">Created on %s</string>
  <string name="profile_edit_rename">Rename</string>
  <string name="profile_edit_reset">Reset PIN</string>
  <string name="profile_edit_delete">Profile Deletion</string>
  <string name="profile_edit_delete_dialog_title">Permanently delete this profile?</string>
  <string name="profile_edit_allow_download_heading">Allow Download Access</string>
  <string name="profile_edit_allow_download_sub">User is able to download and delete content without Administrator password</string>
</resources>