<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:profile="http://schemas.android.com/tools">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="org.oppia.app.settings.profile.ProfileEditViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profileEditBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/profile_edit_main"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:paddingBottom="40dp"
      app:layout_constraintTop_toTopOf="parent">

      <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_edit_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        profile:src="@{viewModel.profile.avatar}" />

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/profile_edit_image"
        app:layout_constraintStart_toEndOf="@id/profile_edit_image"
        app:layout_constraintTop_toTopOf="@id/profile_edit_image">

        <TextView
          android:id="@+id/profile_edit_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{viewModel.profile.name}"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/profile_edit_created"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:textColor="@color/oppiaPrimaryText"
          android:textSize="16sp"
          profile:created="@{viewModel.profile.dateCreatedTimestampMs}" />
      </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintTop_toBottomOf="@id/profile_edit_main">

      <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey" />

      <TextView
        android:id="@+id/profile_rename_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/profile_edit_rename"
        android:textColor="@color/oppiaPrimaryText"
        android:textSize="16sp" />

      <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey" />

      <TextView
        android:id="@+id/profile_reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/profile_edit_reset"
        android:textColor="@color/oppiaPrimaryText"
        android:textAllCaps="false"
        android:textSize="16sp" />

      <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="@{viewModel.profile.isAdmin ? View.GONE : View.VISIBLE}">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/profile_edit_allow_download_container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/white"
          android:paddingStart="16dp"
          android:paddingTop="12dp"
          android:paddingEnd="28dp"
          android:paddingBottom="12dp">

          <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/profile_edit_allow_download_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
              android:id="@+id/profile_edit_allow_download_heading"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/profile_edit_allow_download_heading"
              android:textColor="@color/oppiaPrimaryTextDark"
              android:textSize="16sp" />

            <TextView
              android:id="@+id/profile_edit_allow_download_sub"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="@color/divider"
              android:text="@string/profile_edit_allow_download_sub" />
          </LinearLayout>

          <Switch
            android:id="@+id/profile_edit_allow_download_switch"
            style="@style/SwitchCompatTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
          android:layout_width="match_parent"
          android:layout_height="2dp"
          android:background="@color/grey" />
      </LinearLayout>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="12dp"
      android:orientation="vertical"
      android:visibility="@{viewModel.profile.isAdmin ? View.GONE : View.VISIBLE}"
      app:layout_constraintBottom_toBottomOf="parent">

      <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey" />

      <TextView
        android:id="@+id/profile_delete_button"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="28dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/profile_edit_delete"
        android:textAllCaps="false"
        android:textColor="@color/profileDeleteTextColor"
        android:textSize="16sp" />

      <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey" />
    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
